tests-system/empty-attributes/output
checks BaseRequirement {
       ^^^^^^^^^^^^^^^ empty-attributes/bar.rsl:10: error: unknown symbol BaseRequirement
Processed 1 model and 1 requirement file and found 1 error
